<resources>
    <string name="app_name">JustJava</string>
    <string name="tw_qnt_name">Quantity</string>
    <!-- Header text for the list of toppings [CHAR LIMIT = 20] -->
    <string name="tw_top_name">Toppings</string>
    <string name="tw_price_name">Order Summary</string>
    <string name="cb_item_01">Whipped cream</string>
    <string name="cb_item_02">Chocolate</string>
    <string name="btn_incr_name" translatable="false">+</string>
    <string name="btn_decr_name" translatable="false">-</string>
    <string name="btn_order_name">Order</string>
    <string name="field_name_hint">Name</string>
    <string name="thank_you">Thank you!</string>
</resources>
